parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> START SAUXI PUNTOS V MethodsBlock SSAUXI MainBlock ENDSTART SEMICOLON SSSAUXI
Rule 2     Programa -> empty
Rule 3     SAUXI -> <empty>
Rule 4     SSAUXI -> <empty>
Rule 5     SSSAUXI -> <empty>
Rule 6     V -> V Tipo_M
Rule 7     V -> V Tipo_A
Rule 8     V -> empty
Rule 9     Tipo_M -> INT ID ASIGNACION INTEGER SEMICOLON
Rule 10    Tipo_M -> FLO ID ASIGNACION FLOAT SEMICOLON
Rule 11    Tipo_A -> INT Arreglo2 ID TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE LCORCHETE INTEGER TTTAUXI RCORCHETE SEMICOLON
Rule 12    Tipo_A -> FLO Arreglo2 ID TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE LCORCHETE INTEGER TTTAUXI RCORCHETE SEMICOLON
Rule 13    Tipo_A -> INT Arreglo1 ID TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE SEMICOLON
Rule 14    Tipo_A -> FLO Arreglo1 ID TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE SEMICOLON
Rule 15    TAUXI -> <empty>
Rule 16    TTAUXI -> <empty>
Rule 17    TTTAUXI -> <empty>
Rule 18    MainBlock -> MAIN LPAREN RPAREN PUNTOS Statements ENDMAIN SEMICOLON
Rule 19    MethodsBlock -> METHOD ID MAUXI LPAREN RPAREN PUNTOS Statements ENDMETHOD SEMICOLON MMAUXI MethodsBlock
Rule 20    MethodsBlock -> empty
Rule 21    MAUXI -> <empty>
Rule 22    MMAUXI -> <empty>
Rule 23    Statements -> ID ASIGNACION expression SEMICOLON Auxi Statements
Rule 24    Statements -> SVar ASIGNACION expression SEMICOLON AuxiV Statements
Rule 25    Statements -> FOR LPAREN ID ASIGNACION expression COMA FAUXI FFAUXI Comparison FFFAUXI RPAREN PUNTOS Statements FFFFAUXI ENDFOR SEMICOLON Statements
Rule 26    Statements -> WHILE WAUXI LPAREN Comparison WWAUXI RPAREN PUNTOS Statements WWWAUXI ENDWHILE SEMICOLON Statements
Rule 27    Statements -> IF LPAREN Comparison RPAREN IAUXI PUNTOS TRUE PUNTOS Statements ENDTRUE SEMICOLON FALSE PUNTOS IIAUXI Statements ENDFALSE SEMICOLON ENDIF SEMICOLON IIIAUXI Statements
Rule 28    Statements -> IF LPAREN Comparison RPAREN IAUXI PUNTOS TRUE PUNTOS Statements ENDTRUE SEMICOLON ENDIF SEMICOLON IIIAUXI Statements
Rule 29    Statements -> PRINTA LPAREN ID PAUXI RPAREN SEMICOLON Statements
Rule 30    Statements -> PRINTA LPAREN SVar PAUXIV RPAREN SEMICOLON Statements
Rule 31    Statements -> READ LPAREN ID RAUXI RPAREN SEMICOLON Statements
Rule 32    Statements -> READ LPAREN SVar RAUXIV RPAREN SEMICOLON Statements
Rule 33    Statements -> CALL LPAREN ID CAUXI RPAREN SEMICOLON Statements
Rule 34    Statements -> empty
Rule 35    SVar -> ID VAUXI LCORCHETE VVAUXI expression VVVAUXI RCORCHETE
Rule 36    SVar -> ID VAUXI LCORCHETE VVAUXI expression VVVAUXI RCORCHETE LCORCHETE expression VVVVAUXI RCORCHETE
Rule 37    VAUXI -> <empty>
Rule 38    VVAUXI -> <empty>
Rule 39    VVVAUXI -> <empty>
Rule 40    VVVVAUXI -> <empty>
Rule 41    PAUXI -> <empty>
Rule 42    PAUXIV -> <empty>
Rule 43    RAUXI -> <empty>
Rule 44    RAUXIV -> <empty>
Rule 45    CAUXI -> <empty>
Rule 46    FAUXI -> <empty>
Rule 47    FFAUXI -> <empty>
Rule 48    FFFAUXI -> <empty>
Rule 49    FFFFAUXI -> <empty>
Rule 50    WAUXI -> <empty>
Rule 51    WWAUXI -> <empty>
Rule 52    WWWAUXI -> <empty>
Rule 53    IAUXI -> <empty>
Rule 54    IIAUXI -> <empty>
Rule 55    IIIAUXI -> <empty>
Rule 56    Auxi -> <empty>
Rule 57    AuxiV -> <empty>
Rule 58    Comparison -> ID IGUALDADCOM ID
Rule 59    Comparison -> ID MAYORCOM ID
Rule 60    Comparison -> ID MENORCOM ID
Rule 61    expression -> expression PLUS S
Rule 62    expression -> S
Rule 63    S -> S MINUS T
Rule 64    S -> T
Rule 65    T -> T TIMES F
Rule 66    T -> F
Rule 67    F -> F DIVIDE R
Rule 68    F -> R
Rule 69    R -> ID
Rule 70    R -> SVar
Rule 71    R -> INTEGER
Rule 72    R -> FLOAT
Rule 73    R -> LPAREN expression RPAREN
Rule 74    empty -> <empty>

Terminals, with rules where they appear

ASIGNACION           : 9 10 23 24 25
Arreglo1             : 13 14
Arreglo2             : 11 12
CALL                 : 33
COMA                 : 25
DIVIDE               : 67
ENDFALSE             : 27
ENDFOR               : 25
ENDIF                : 27 28
ENDMAIN              : 18
ENDMETHOD            : 19
ENDSTART             : 1
ENDTRUE              : 27 28
ENDWHILE             : 26
FALSE                : 27
FLO                  : 10 12 14
FLOAT                : 10 72
FOR                  : 25
ID                   : 9 10 11 12 13 14 19 23 25 29 31 33 35 36 58 58 59 59 60 60 69
IF                   : 27 28
IGUALDADCOM          : 58
INT                  : 9 11 13
INTEGER              : 9 11 11 12 12 13 14 71
LCORCHETE            : 11 11 12 12 13 14 35 36 36
LPAREN               : 18 19 25 26 27 28 29 30 31 32 33 73
MAIN                 : 18
MAYORCOM             : 59
MENORCOM             : 60
METHOD               : 19
MINUS                : 63
PLUS                 : 61
PRINTA               : 29 30
PUNTOS               : 1 18 19 25 26 27 27 27 28 28
RCORCHETE            : 11 11 12 12 13 14 35 36 36
READ                 : 31 32
RPAREN               : 18 19 25 26 27 28 29 30 31 32 33 73
SEMICOLON            : 1 9 10 11 12 13 14 18 19 23 24 25 26 27 27 27 28 28 29 30 31 32 33
START                : 1
TIMES                : 65
TRUE                 : 27 28
WHILE                : 26
error                : 

Nonterminals, with rules where they appear

Auxi                 : 23
AuxiV                : 24
CAUXI                : 33
Comparison           : 25 26 27 28
F                    : 65 66 67
FAUXI                : 25
FFAUXI               : 25
FFFAUXI              : 25
FFFFAUXI             : 25
IAUXI                : 27 28
IIAUXI               : 27
IIIAUXI              : 27 28
MAUXI                : 19
MMAUXI               : 19
MainBlock            : 1
MethodsBlock         : 1 19
PAUXI                : 29
PAUXIV               : 30
Programa             : 0
R                    : 67 68
RAUXI                : 31
RAUXIV               : 32
S                    : 61 62 63
SAUXI                : 1
SSAUXI               : 1
SSSAUXI              : 1
SVar                 : 24 30 32 70
Statements           : 18 19 23 24 25 25 26 26 27 27 27 28 28 29 30 31 32 33
T                    : 63 64 65
TAUXI                : 11 12 13 14
TTAUXI               : 11 12 13 14
TTTAUXI              : 11 12
Tipo_A               : 7
Tipo_M               : 6
V                    : 1 6 7
VAUXI                : 35 36
VVAUXI               : 35 36
VVVAUXI              : 35 36
VVVVAUXI             : 36
WAUXI                : 26
WWAUXI               : 26
WWWAUXI              : 26
empty                : 2 8 20 34
expression           : 23 24 25 35 36 36 61 73

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . START SAUXI PUNTOS V MethodsBlock SSAUXI MainBlock ENDSTART SEMICOLON SSSAUXI
    (2) Programa -> . empty
    (74) empty -> .

    START           shift and go to state 2
    $end            reduce using rule 74 (empty -> .)

    Programa                       shift and go to state 1
    empty                          shift and go to state 3

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> START . SAUXI PUNTOS V MethodsBlock SSAUXI MainBlock ENDSTART SEMICOLON SSSAUXI
    (3) SAUXI -> .

    PUNTOS          reduce using rule 3 (SAUXI -> .)

    SAUXI                          shift and go to state 4

state 3

    (2) Programa -> empty .

    $end            reduce using rule 2 (Programa -> empty .)


state 4

    (1) Programa -> START SAUXI . PUNTOS V MethodsBlock SSAUXI MainBlock ENDSTART SEMICOLON SSSAUXI

    PUNTOS          shift and go to state 5


state 5

    (1) Programa -> START SAUXI PUNTOS . V MethodsBlock SSAUXI MainBlock ENDSTART SEMICOLON SSSAUXI
    (6) V -> . V Tipo_M
    (7) V -> . V Tipo_A
    (8) V -> . empty
    (74) empty -> .

    METHOD          reduce using rule 74 (empty -> .)
    INT             reduce using rule 74 (empty -> .)
    FLO             reduce using rule 74 (empty -> .)
    MAIN            reduce using rule 74 (empty -> .)

    V                              shift and go to state 6
    empty                          shift and go to state 7

state 6

    (1) Programa -> START SAUXI PUNTOS V . MethodsBlock SSAUXI MainBlock ENDSTART SEMICOLON SSSAUXI
    (6) V -> V . Tipo_M
    (7) V -> V . Tipo_A
    (19) MethodsBlock -> . METHOD ID MAUXI LPAREN RPAREN PUNTOS Statements ENDMETHOD SEMICOLON MMAUXI MethodsBlock
    (20) MethodsBlock -> . empty
    (9) Tipo_M -> . INT ID ASIGNACION INTEGER SEMICOLON
    (10) Tipo_M -> . FLO ID ASIGNACION FLOAT SEMICOLON
    (11) Tipo_A -> . INT Arreglo2 ID TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE LCORCHETE INTEGER TTTAUXI RCORCHETE SEMICOLON
    (12) Tipo_A -> . FLO Arreglo2 ID TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE LCORCHETE INTEGER TTTAUXI RCORCHETE SEMICOLON
    (13) Tipo_A -> . INT Arreglo1 ID TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE SEMICOLON
    (14) Tipo_A -> . FLO Arreglo1 ID TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE SEMICOLON
    (74) empty -> .

    METHOD          shift and go to state 11
    INT             shift and go to state 13
    FLO             shift and go to state 14
    MAIN            reduce using rule 74 (empty -> .)

    MethodsBlock                   shift and go to state 8
    Tipo_M                         shift and go to state 9
    Tipo_A                         shift and go to state 10
    empty                          shift and go to state 12

state 7

    (8) V -> empty .

    METHOD          reduce using rule 8 (V -> empty .)
    INT             reduce using rule 8 (V -> empty .)
    FLO             reduce using rule 8 (V -> empty .)
    MAIN            reduce using rule 8 (V -> empty .)


state 8

    (1) Programa -> START SAUXI PUNTOS V MethodsBlock . SSAUXI MainBlock ENDSTART SEMICOLON SSSAUXI
    (4) SSAUXI -> .

    MAIN            reduce using rule 4 (SSAUXI -> .)

    SSAUXI                         shift and go to state 15

state 9

    (6) V -> V Tipo_M .

    METHOD          reduce using rule 6 (V -> V Tipo_M .)
    INT             reduce using rule 6 (V -> V Tipo_M .)
    FLO             reduce using rule 6 (V -> V Tipo_M .)
    MAIN            reduce using rule 6 (V -> V Tipo_M .)


state 10

    (7) V -> V Tipo_A .

    METHOD          reduce using rule 7 (V -> V Tipo_A .)
    INT             reduce using rule 7 (V -> V Tipo_A .)
    FLO             reduce using rule 7 (V -> V Tipo_A .)
    MAIN            reduce using rule 7 (V -> V Tipo_A .)


state 11

    (19) MethodsBlock -> METHOD . ID MAUXI LPAREN RPAREN PUNTOS Statements ENDMETHOD SEMICOLON MMAUXI MethodsBlock

    ID              shift and go to state 16


state 12

    (20) MethodsBlock -> empty .

    MAIN            reduce using rule 20 (MethodsBlock -> empty .)


state 13

    (9) Tipo_M -> INT . ID ASIGNACION INTEGER SEMICOLON
    (11) Tipo_A -> INT . Arreglo2 ID TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE LCORCHETE INTEGER TTTAUXI RCORCHETE SEMICOLON
    (13) Tipo_A -> INT . Arreglo1 ID TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE SEMICOLON

    ID              shift and go to state 17
    Arreglo2        shift and go to state 18
    Arreglo1        shift and go to state 19


state 14

    (10) Tipo_M -> FLO . ID ASIGNACION FLOAT SEMICOLON
    (12) Tipo_A -> FLO . Arreglo2 ID TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE LCORCHETE INTEGER TTTAUXI RCORCHETE SEMICOLON
    (14) Tipo_A -> FLO . Arreglo1 ID TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE SEMICOLON

    ID              shift and go to state 20
    Arreglo2        shift and go to state 21
    Arreglo1        shift and go to state 22


state 15

    (1) Programa -> START SAUXI PUNTOS V MethodsBlock SSAUXI . MainBlock ENDSTART SEMICOLON SSSAUXI
    (18) MainBlock -> . MAIN LPAREN RPAREN PUNTOS Statements ENDMAIN SEMICOLON

    MAIN            shift and go to state 24

    MainBlock                      shift and go to state 23

state 16

    (19) MethodsBlock -> METHOD ID . MAUXI LPAREN RPAREN PUNTOS Statements ENDMETHOD SEMICOLON MMAUXI MethodsBlock
    (21) MAUXI -> .

    LPAREN          reduce using rule 21 (MAUXI -> .)

    MAUXI                          shift and go to state 25

state 17

    (9) Tipo_M -> INT ID . ASIGNACION INTEGER SEMICOLON

    ASIGNACION      shift and go to state 26


state 18

    (11) Tipo_A -> INT Arreglo2 . ID TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE LCORCHETE INTEGER TTTAUXI RCORCHETE SEMICOLON

    ID              shift and go to state 27


state 19

    (13) Tipo_A -> INT Arreglo1 . ID TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE SEMICOLON

    ID              shift and go to state 28


state 20

    (10) Tipo_M -> FLO ID . ASIGNACION FLOAT SEMICOLON

    ASIGNACION      shift and go to state 29


state 21

    (12) Tipo_A -> FLO Arreglo2 . ID TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE LCORCHETE INTEGER TTTAUXI RCORCHETE SEMICOLON

    ID              shift and go to state 30


state 22

    (14) Tipo_A -> FLO Arreglo1 . ID TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE SEMICOLON

    ID              shift and go to state 31


state 23

    (1) Programa -> START SAUXI PUNTOS V MethodsBlock SSAUXI MainBlock . ENDSTART SEMICOLON SSSAUXI

    ENDSTART        shift and go to state 32


state 24

    (18) MainBlock -> MAIN . LPAREN RPAREN PUNTOS Statements ENDMAIN SEMICOLON

    LPAREN          shift and go to state 33


state 25

    (19) MethodsBlock -> METHOD ID MAUXI . LPAREN RPAREN PUNTOS Statements ENDMETHOD SEMICOLON MMAUXI MethodsBlock

    LPAREN          shift and go to state 34


state 26

    (9) Tipo_M -> INT ID ASIGNACION . INTEGER SEMICOLON

    INTEGER         shift and go to state 35


state 27

    (11) Tipo_A -> INT Arreglo2 ID . TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE LCORCHETE INTEGER TTTAUXI RCORCHETE SEMICOLON
    (15) TAUXI -> .

    LCORCHETE       reduce using rule 15 (TAUXI -> .)

    TAUXI                          shift and go to state 36

state 28

    (13) Tipo_A -> INT Arreglo1 ID . TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE SEMICOLON
    (15) TAUXI -> .

    LCORCHETE       reduce using rule 15 (TAUXI -> .)

    TAUXI                          shift and go to state 37

state 29

    (10) Tipo_M -> FLO ID ASIGNACION . FLOAT SEMICOLON

    FLOAT           shift and go to state 38


state 30

    (12) Tipo_A -> FLO Arreglo2 ID . TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE LCORCHETE INTEGER TTTAUXI RCORCHETE SEMICOLON
    (15) TAUXI -> .

    LCORCHETE       reduce using rule 15 (TAUXI -> .)

    TAUXI                          shift and go to state 39

state 31

    (14) Tipo_A -> FLO Arreglo1 ID . TAUXI LCORCHETE INTEGER TTAUXI RCORCHETE SEMICOLON
    (15) TAUXI -> .

    LCORCHETE       reduce using rule 15 (TAUXI -> .)

    TAUXI                          shift and go to state 40

state 32

    (1) Programa -> START SAUXI PUNTOS V MethodsBlock SSAUXI MainBlock ENDSTART . SEMICOLON SSSAUXI

    SEMICOLON       shift and go to state 41


state 33

    (18) MainBlock -> MAIN LPAREN . RPAREN PUNTOS Statements ENDMAIN SEMICOLON

    RPAREN          shift and go to state 42


state 34

    (19) MethodsBlock -> METHOD ID MAUXI LPAREN . RPAREN PUNTOS Statements ENDMETHOD SEMICOLON MMAUXI MethodsBlock

    RPAREN          shift and go to state 43


state 35

    (9) Tipo_M -> INT ID ASIGNACION INTEGER . SEMICOLON

    SEMICOLON       shift and go to state 44


state 36

    (11) Tipo_A -> INT Arreglo2 ID TAUXI . LCORCHETE INTEGER TTAUXI RCORCHETE LCORCHETE INTEGER TTTAUXI RCORCHETE SEMICOLON

    LCORCHETE       shift and go to state 45


state 37

    (13) Tipo_A -> INT Arreglo1 ID TAUXI . LCORCHETE INTEGER TTAUXI RCORCHETE SEMICOLON

    LCORCHETE       shift and go to state 46


state 38

    (10) Tipo_M -> FLO ID ASIGNACION FLOAT . SEMICOLON

    SEMICOLON       shift and go to state 47


state 39

    (12) Tipo_A -> FLO Arreglo2 ID TAUXI . LCORCHETE INTEGER TTAUXI RCORCHETE LCORCHETE INTEGER TTTAUXI RCORCHETE SEMICOLON

    LCORCHETE       shift and go to state 48


state 40

    (14) Tipo_A -> FLO Arreglo1 ID TAUXI . LCORCHETE INTEGER TTAUXI RCORCHETE SEMICOLON

    LCORCHETE       shift and go to state 49


state 41

    (1) Programa -> START SAUXI PUNTOS V MethodsBlock SSAUXI MainBlock ENDSTART SEMICOLON . SSSAUXI
    (5) SSSAUXI -> .

    $end            reduce using rule 5 (SSSAUXI -> .)

    SSSAUXI                        shift and go to state 50

state 42

    (18) MainBlock -> MAIN LPAREN RPAREN . PUNTOS Statements ENDMAIN SEMICOLON

    PUNTOS          shift and go to state 51


state 43

    (19) MethodsBlock -> METHOD ID MAUXI LPAREN RPAREN . PUNTOS Statements ENDMETHOD SEMICOLON MMAUXI MethodsBlock

    PUNTOS          shift and go to state 52


state 44

    (9) Tipo_M -> INT ID ASIGNACION INTEGER SEMICOLON .

    METHOD          reduce using rule 9 (Tipo_M -> INT ID ASIGNACION INTEGER SEMICOLON .)
    INT             reduce using rule 9 (Tipo_M -> INT ID ASIGNACION INTEGER SEMICOLON .)
    FLO             reduce using rule 9 (Tipo_M -> INT ID ASIGNACION INTEGER SEMICOLON .)
    MAIN            reduce using rule 9 (Tipo_M -> INT ID ASIGNACION INTEGER SEMICOLON .)


state 45

    (11) Tipo_A -> INT Arreglo2 ID TAUXI LCORCHETE . INTEGER TTAUXI RCORCHETE LCORCHETE INTEGER TTTAUXI RCORCHETE SEMICOLON

    INTEGER         shift and go to state 53


state 46

    (13) Tipo_A -> INT Arreglo1 ID TAUXI LCORCHETE . INTEGER TTAUXI RCORCHETE SEMICOLON

    INTEGER         shift and go to state 54


state 47

    (10) Tipo_M -> FLO ID ASIGNACION FLOAT SEMICOLON .

    METHOD          reduce using rule 10 (Tipo_M -> FLO ID ASIGNACION FLOAT SEMICOLON .)
    INT             reduce using rule 10 (Tipo_M -> FLO ID ASIGNACION FLOAT SEMICOLON .)
    FLO             reduce using rule 10 (Tipo_M -> FLO ID ASIGNACION FLOAT SEMICOLON .)
    MAIN            reduce using rule 10 (Tipo_M -> FLO ID ASIGNACION FLOAT SEMICOLON .)


state 48

    (12) Tipo_A -> FLO Arreglo2 ID TAUXI LCORCHETE . INTEGER TTAUXI RCORCHETE LCORCHETE INTEGER TTTAUXI RCORCHETE SEMICOLON

    INTEGER         shift and go to state 55


state 49

    (14) Tipo_A -> FLO Arreglo1 ID TAUXI LCORCHETE . INTEGER TTAUXI RCORCHETE SEMICOLON

    INTEGER         shift and go to state 56


state 50

    (1) Programa -> START SAUXI PUNTOS V MethodsBlock SSAUXI MainBlock ENDSTART SEMICOLON SSSAUXI .

    $end            reduce using rule 1 (Programa -> START SAUXI PUNTOS V MethodsBlock SSAUXI MainBlock ENDSTART SEMICOLON SSSAUXI .)


state 51

    (18) MainBlock -> MAIN LPAREN RPAREN PUNTOS . Statements ENDMAIN SEMICOLON
    (23) Statements -> . ID ASIGNACION expression SEMICOLON Auxi Statements
    (24) Statements -> . SVar ASIGNACION expression SEMICOLON AuxiV Statements
    (25) Statements -> . FOR LPAREN ID ASIGNACION expression COMA FAUXI FFAUXI Comparison FFFAUXI RPAREN PUNTOS Statements FFFFAUXI ENDFOR SEMICOLON Statements
    (26) Statements -> . WHILE WAUXI LPAREN Comparison WWAUXI RPAREN PUNTOS Statements WWWAUXI ENDWHILE SEMICOLON Statements
    (27) Statements -> . IF LPAREN Comparison RPAREN IAUXI PUNTOS TRUE PUNTOS Statements ENDTRUE SEMICOLON FALSE PUNTOS IIAUXI Statements ENDFALSE SEMICOLON ENDIF SEMICOLON IIIAUXI Statements
    (28) Statements -> . IF LPAREN Comparison RPAREN IAUXI PUNTOS TRUE PUNTOS Statements ENDTRUE SEMICOLON ENDIF SEMICOLON IIIAUXI Statements
    (29) Statements -> . PRINTA LPAREN ID PAUXI RPAREN SEMICOLON Statements
    (30) Statements -> . PRINTA LPAREN SVar PAUXIV RPAREN SEMICOLON Statements
    (31) Statements -> . READ LPAREN ID RAUXI RPAREN SEMICOLON Statements
    (32) Statements -> . READ LPAREN SVar RAUXIV RPAREN SEMICOLON Statements
    (33) Statements -> . CALL LPAREN ID CAUXI RPAREN SEMICOLON Statements
    (34) Statements -> . empty
    (35) SVar -> . ID VAUXI LCORCHETE VVAUXI expression VVVAUXI RCORCHETE
    (36) SVar -> . ID VAUXI LCORCHETE VVAUXI expression VVVAUXI RCORCHETE LCORCHETE expression VVVVAUXI RCORCHETE
    (74) empty -> .

    ID              shift and go to state 58
    FOR             shift and go to state 60
    WHILE           shift and go to state 61
    IF              shift and go to state 62
    PRINTA          shift and go to state 63
    READ            shift and go to state 64
    CALL            shift and go to state 65
    ENDMAIN         reduce using rule 74 (empty -> .)

    Statements                     shift and go to state 57
    SVar                           shift and go to state 59
    empty                          shift and go to state 66

state 52

    (19) MethodsBlock -> METHOD ID MAUXI LPAREN RPAREN PUNTOS . Statements ENDMETHOD SEMICOLON MMAUXI MethodsBlock
    (23) Statements -> . ID ASIGNACION expression SEMICOLON Auxi Statements
    (24) Statements -> . SVar ASIGNACION expression SEMICOLON AuxiV Statements
    (25) Statements -> . FOR LPAREN ID ASIGNACION expression COMA FAUXI FFAUXI Comparison FFFAUXI RPAREN PUNTOS Statements FFFFAUXI ENDFOR SEMICOLON Statements
    (26) Statements -> . WHILE WAUXI LPAREN Comparison WWAUXI RPAREN PUNTOS Statements WWWAUXI ENDWHILE SEMICOLON Statements
    (27) Statements -> . IF LPAREN Comparison RPAREN IAUXI PUNTOS TRUE PUNTOS Statements ENDTRUE SEMICOLON FALSE PUNTOS IIAUXI Statements ENDFALSE SEMICOLON ENDIF SEMICOLON IIIAUXI Statements
    (28) Statements -> . IF LPAREN Comparison RPAREN IAUXI PUNTOS TRUE PUNTOS Statements ENDTRUE SEMICOLON ENDIF SEMICOLON IIIAUXI Statements
    (29) Statements -> . PRINTA LPAREN ID PAUXI RPAREN SEMICOLON Statements
    (30) Statements -> . PRINTA LPAREN SVar PAUXIV RPAREN SEMICOLON Statements
    (31) Statements -> . READ LPAREN ID RAUXI RPAREN SEMICOLON Statements
    (32) Statements -> . READ LPAREN SVar RAUXIV RPAREN SEMICOLON Statements
    (33) Statements -> . CALL LPAREN ID CAUXI RPAREN SEMICOLON Statements
    (34) Statements -> . empty
    (35) SVar -> . ID VAUXI LCORCHETE VVAUXI expression VVVAUXI RCORCHETE
    (36) SVar -> . ID VAUXI LCORCHETE VVAUXI expression VVVAUXI RCORCHETE LCORCHETE expression VVVVAUXI RCORCHETE
    (74) empty -> .

    ID              shift and go to state 58
    FOR             shift and go to state 60
    WHILE           shift and go to state 61
    IF              shift and go to state 62
    PRINTA          shift and go to state 63
    READ            shift and go to state 64
    CALL            shift and go to state 65
    ENDMETHOD       reduce using rule 74 (empty -> .)

    Statements                     shift and go to state 67
    SVar                           shift and go to state 59
    empty                          shift and go to state 66

state 53

    (11) Tipo_A -> INT Arreglo2 ID TAUXI LCORCHETE INTEGER . TTAUXI RCORCHETE LCORCHETE INTEGER TTTAUXI RCORCHETE SEMICOLON
    (16) TTAUXI -> .

    RCORCHETE       reduce using rule 16 (TTAUXI -> .)

    TTAUXI                         shift and go to state 68

state 54

    (13) Tipo_A -> INT Arreglo1 ID TAUXI LCORCHETE INTEGER . TTAUXI RCORCHETE SEMICOLON
    (16) TTAUXI -> .

    RCORCHETE       reduce using rule 16 (TTAUXI -> .)

    TTAUXI                         shift and go to state 69

state 55

    (12) Tipo_A -> FLO Arreglo2 ID TAUXI LCORCHETE INTEGER . TTAUXI RCORCHETE LCORCHETE INTEGER TTTAUXI RCORCHETE SEMICOLON
    (16) TTAUXI -> .

    RCORCHETE       reduce using rule 16 (TTAUXI -> .)

    TTAUXI                         shift and go to state 70

state 56

    (14) Tipo_A -> FLO Arreglo1 ID TAUXI LCORCHETE INTEGER . TTAUXI RCORCHETE SEMICOLON
    (16) TTAUXI -> .

    RCORCHETE       reduce using rule 16 (TTAUXI -> .)

    TTAUXI                         shift and go to state 71

state 57

    (18) MainBlock -> MAIN LPAREN RPAREN PUNTOS Statements . ENDMAIN SEMICOLON

    ENDMAIN         shift and go to state 72


state 58

    (23) Statements -> ID . ASIGNACION expression SEMICOLON Auxi Statements
    (35) SVar -> ID . VAUXI LCORCHETE VVAUXI expression VVVAUXI RCORCHETE
    (36) SVar -> ID . VAUXI LCORCHETE VVAUXI expression VVVAUXI RCORCHETE LCORCHETE expression VVVVAUXI RCORCHETE
    (37) VAUXI -> .

    ASIGNACION      shift and go to state 73
    LCORCHETE       reduce using rule 37 (VAUXI -> .)

    VAUXI                          shift and go to state 74

state 59

    (24) Statements -> SVar . ASIGNACION expression SEMICOLON AuxiV Statements

    ASIGNACION      shift and go to state 75


state 60

    (25) Statements -> FOR . LPAREN ID ASIGNACION expression COMA FAUXI FFAUXI Comparison FFFAUXI RPAREN PUNTOS Statements FFFFAUXI ENDFOR SEMICOLON Statements

    LPAREN          shift and go to state 76


state 61

    (26) Statements -> WHILE . WAUXI LPAREN Comparison WWAUXI RPAREN PUNTOS Statements WWWAUXI ENDWHILE SEMICOLON Statements
    (50) WAUXI -> .

    LPAREN          reduce using rule 50 (WAUXI -> .)

    WAUXI                          shift and go to state 77

state 62

    (27) Statements -> IF . LPAREN Comparison RPAREN IAUXI PUNTOS TRUE PUNTOS Statements ENDTRUE SEMICOLON FALSE PUNTOS IIAUXI Statements ENDFALSE SEMICOLON ENDIF SEMICOLON IIIAUXI Statements
    (28) Statements -> IF . LPAREN Comparison RPAREN IAUXI PUNTOS TRUE PUNTOS Statements ENDTRUE SEMICOLON ENDIF SEMICOLON IIIAUXI Statements

    LPAREN          shift and go to state 78


state 63

    (29) Statements -> PRINTA . LPAREN ID PAUXI RPAREN SEMICOLON Statements
    (30) Statements -> PRINTA . LPAREN SVar PAUXIV RPAREN SEMICOLON Statements

    LPAREN          shift and go to state 79


state 64

    (31) Statements -> READ . LPAREN ID RAUXI RPAREN SEMICOLON Statements
    (32) Statements -> READ . LPAREN SVar RAUXIV RPAREN SEMICOLON Statements

    LPAREN          shift and go to state 80


state 65

    (33) Statements -> CALL . LPAREN ID CAUXI RPAREN SEMICOLON Statements

    LPAREN          shift and go to state 81


state 66

    (34) Statements -> empty .

    ENDMAIN         reduce using rule 34 (Statements -> empty .)
    ENDMETHOD       reduce using rule 34 (Statements -> empty .)
    ENDWHILE        reduce using rule 34 (Statements -> empty .)
    ENDTRUE         reduce using rule 34 (Statements -> empty .)
    ENDFOR          reduce using rule 34 (Statements -> empty .)
    ENDFALSE        reduce using rule 34 (Statements -> empty .)


state 67

    (19) MethodsBlock -> METHOD ID MAUXI LPAREN RPAREN PUNTOS Statements . ENDMETHOD SEMICOLON MMAUXI MethodsBlock

    ENDMETHOD       shift and go to state 82


state 68

    (11) Tipo_A -> INT Arreglo2 ID TAUXI LCORCHETE INTEGER TTAUXI . RCORCHETE LCORCHETE INTEGER TTTAUXI RCORCHETE SEMICOLON

    RCORCHETE       shift and go to state 83


state 69

    (13) Tipo_A -> INT Arreglo1 ID TAUXI LCORCHETE INTEGER TTAUXI . RCORCHETE SEMICOLON

    RCORCHETE       shift and go to state 84


state 70

    (12) Tipo_A -> FLO Arreglo2 ID TAUXI LCORCHETE INTEGER TTAUXI . RCORCHETE LCORCHETE INTEGER TTTAUXI RCORCHETE SEMICOLON

    RCORCHETE       shift and go to state 85


state 71

    (14) Tipo_A -> FLO Arreglo1 ID TAUXI LCORCHETE INTEGER TTAUXI . RCORCHETE SEMICOLON

    RCORCHETE       shift and go to state 86


state 72

    (18) MainBlock -> MAIN LPAREN RPAREN PUNTOS Statements ENDMAIN . SEMICOLON

    SEMICOLON       shift and go to state 87


state 73

    (23) Statements -> ID ASIGNACION . expression SEMICOLON Auxi Statements
    (61) expression -> . expression PLUS S
    (62) expression -> . S
    (63) S -> . S MINUS T
    (64) S -> . T
    (65) T -> . T TIMES F
    (66) T -> . F
    (67) F -> . F DIVIDE R
    (68) F -> . R
    (69) R -> . ID
    (70) R -> . SVar
    (71) R -> . INTEGER
    (72) R -> . FLOAT
    (73) R -> . LPAREN expression RPAREN
    (35) SVar -> . ID VAUXI LCORCHETE VVAUXI expression VVVAUXI RCORCHETE
    (36) SVar -> . ID VAUXI LCORCHETE VVAUXI expression VVVAUXI RCORCHETE LCORCHETE expression VVVVAUXI RCORCHETE

    ID              shift and go to state 88
    INTEGER         shift and go to state 95
    FLOAT           shift and go to state 96
    LPAREN          shift and go to state 97

    expression                     shift and go to state 89
    S                              shift and go to state 90
    T                              shift and go to state 91
